JSAI/error/src/test/resources/scoping/v323.js

var y;
var o = { 
	x: 1,
	foo: function(self) {
		y = this.x;
	}
};

o.foo();
print(y);